--- a/src/pug/_layout.pug
+++ b/src/pug/_layout.pug
@@ -3,16 +3,16 @@ include _mixins
 block vars
 
 doctype html
-html(lang="")
+html(lang="en")
   head
     meta(charset="utf-8")
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
-    meta(name="viewport", content="width=device-width, initial-scale=1")
+    meta(name="viewport" content="initial-scale=1.0, width=device-width")
     title #{pageTitle}
-    meta(name='description', content= pageDescription)
-    meta(name='keywords', content= pageKeywords)
     link(rel="icon" href="img/favicon.ico" type="image/x-icon")
-    
+    meta(name="description", content='Landing page')
+
+    link(rel='stylesheet', href='css/libs.min.css')
     link(rel='stylesheet', href='css/style.min.css')
 
   body.page
