--- a/src/pug/_layout.pug
+++ b/src/pug/_layout.pug
@@ -23,6 +23,7 @@ html(lang="en")
         block content
 
       include modules/_footer
-    block scripts 
+    block scripts
       script(src='js/libs.min.js')
       script(src='js/main.min.js')
+      script var deadline="March 19 2020 18:00:00 GMT+0200"; initializeClock("countdown", deadline); initializeClock("countdown1", deadline);
