--- a/src/pug/modules/_footer.pug
+++ b/src/pug/modules/_footer.pug
@@ -1,61 +1,61 @@
-//footer
-//	.footer
-//		.footer__inner
-//			.container
-//				.footer__content
-//					.footer__column
-//						.footer__subtitle About
-//						.footer__txt A professional set of marketing materials to successful and effective business promotion
-//					.footer__column
-//						.footer__subtitle Products
-//						.footer__list
-//							.footer__item
-//								a(href="javascript:void(0);").footer__link PowerPoint
-//							.footer__item
-//								a(href="javascript:void(0);").footer__link Business cards
-//							.footer__item
-//								a(href="javascript:void(0);").footer__link Creative logo
-//							.footer__item
-//								a(href="javascript:void(0);").footer__link Social media covers and post
-//							.footer__item
-//								a(href="javascript:void(0);").footer__link Web banners
-//							.footer__item
-//								a(href="javascript:void(0);").footer__link Flyers and posters
-//							.footer__item
-//								a(href="javascript:void(0);").footer__link Brochures
-//							.footer__item
-//								a(href="javascript:void(0);").footer__link Stationary
-//							.footer__item
-//								a(href="javascript:void(0);").footer__link Coupons and discounts
-//							.footer__item
-//								a(href="javascript:void(0);").footer__link Greeting cards
-//					.footer__column
-//						.footer__subtitle Contact us
-//						.footer__txt
-//							| Address: some address here <br>
-//							| <br>
-//							| Phone number: <br>
-//							a(href="tel:80990005525") 8(099)000 55 25
-//							| <br>
-//							| <br>
-//							| Email:
-//							a(href="mailto:somemail@here.com")  somemail@here.com
-//
-//
-//		.footer__bottom
-//			.container
-//				.footer__bottom-content
-//					.footer__bottom-txt Copyright © 2020
-//					.footer__bottom-list
-//						a(href="#").footer__bottom-link.b-lazy(data-blazy="img/footer-be.svg")
-//						a(href="#").footer__bottom-link.b-lazy(data-blazy="img/footer-inst.svg")
-//						a(href="#").footer__bottom-link.b-lazy(data-blazy="img/footer-fb.svg")
-//
-//
-//.video
-//	.video__inner
-//		.video__close.b-lazy(data-blazy="img/close.svg")
-//		.video__content
-//			iframe.b-lazy.youtube-video(data-blazy="https://www.youtube.com/embed/P3-lbPpxUEw?enablejsapi=1" width="720" height="480" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
-//
-//
+footer
+	.footer
+		.footer__inner
+			.container
+				.footer__content
+					.footer__column
+						.footer__subtitle About
+						.footer__txt A professional set of marketing materials to successful and effective business promotion
+					.footer__column
+						.footer__subtitle Products
+						.footer__list
+							.footer__item
+								a(href="javascript:void(0);").footer__link PowerPoint
+							.footer__item
+								a(href="javascript:void(0);").footer__link Business cards
+							.footer__item
+								a(href="javascript:void(0);").footer__link Creative logo
+							.footer__item
+								a(href="javascript:void(0);").footer__link Social media covers and post
+							.footer__item
+								a(href="javascript:void(0);").footer__link Web banners
+							.footer__item
+								a(href="javascript:void(0);").footer__link Flyers and posters
+							.footer__item
+								a(href="javascript:void(0);").footer__link Brochures
+							.footer__item
+								a(href="javascript:void(0);").footer__link Stationary
+							.footer__item
+								a(href="javascript:void(0);").footer__link Coupons and discounts
+							.footer__item
+								a(href="javascript:void(0);").footer__link Greeting cards
+					.footer__column
+						.footer__subtitle Contact us
+						.footer__txt
+							| Address: some address here <br>
+							| <br>
+							| Phone number: <br>
+							a(href="tel:80990005525") 8(099)000 55 25
+							| <br>
+							| <br>
+							| Email:
+							a(href="mailto:somemail@here.com")  somemail@here.com
+
+
+		.footer__bottom
+			.container
+				.footer__bottom-content
+					.footer__bottom-txt Copyright © 2020
+					.footer__bottom-list
+						a(href="#").footer__bottom-link.b-lazy(data-blazy="img/footer-be.svg")
+						a(href="#").footer__bottom-link.b-lazy(data-blazy="img/footer-inst.svg")
+						a(href="#").footer__bottom-link.b-lazy(data-blazy="img/footer-fb.svg")
+
+
+.video
+	.video__inner
+		.video__close.b-lazy(data-blazy="img/close.svg")
+		.video__content
+			iframe.b-lazy.youtube-video(data-blazy="https://www.youtube.com/embed/P3-lbPpxUEw?enablejsapi=1" width="720" height="480" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
+
+
